Minor name fix on text alignment.

--- a/src/sass/config/_variables.sass
+++ b/src/sass/config/_variables.sass
@@ -44,7 +44,7 @@ $text-font-code-padding: 0.5rem !default
 $text-font-opacity-muted: $opacity-muted
 
 $text-color-map: (primary: $lblue_base, info: $blue_base, success: $green_base, warning: $yellow_base, danger: $red_base, light: $white_base, dark: $black_base) !default
-$text-alignment-map: (align-left: left, align-right: right, align-center: center, justified: justify) !default
+$text-alignment-map: (left: left, right: right, centered: center, justified: justify) !default
 $text-weight-map: (thin: $font-weight-light, normal: $font-weight-normal, bold: $font-weight-bold, thick: $font-weight-thick) !default
 
 // ====================================
